fix timestamp alignment

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -1,7 +1,6 @@
-$lightest-gray: #f7f7f5;
-$light-gray: #e2e2e2;
-$gray: #999;
-$dark-gray: #6f6f6f;
+// $lightest-gray: #f7f7f5;
+// $light-gray: #e2e2e2;
+// $gray: #999;
 
 $lightest-blue: #f0f8fc;
 $light-blue: #6288a5;
@@ -12,3 +11,6 @@ $darkest-blue: #265e8b;
 $deep-blue: #0084ff;
 
 $border-grey: 1px solid rgba(0, 0, 0, .20);
+$light-grey: rgba(0, 0, 0, .20);
+$dark-grey: #6f6f6f;
+$grey: #aaaaaa;
