--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -6,7 +6,9 @@
   // min-width: 200px;
   // max-width: 420px;
 
-  flex: 0 0 240px;
+  // flex: 0 0 240px;
+  width: 240px;
+  // flex: 0 0 340px;
 
   display: flex;
   flex-direction: column;
@@ -49,11 +51,13 @@
   // padding-left: 25px;
   flex: 0 0 64px;
   display: flex;
-  border: $border-grey;
+  // border: $border-grey;
 }
 
 .conversation-item-link {
+  width: 100%;
   display: flex;
+  // justify-content: space-between;
 }
 
 .conversation-item-link:hover {
@@ -67,12 +71,44 @@
 }
 
 .latest-message {
+  flex: 1; 
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 0 12px 0 0;
+  // min-width: 0;
+  max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.conversation-item-header {
+  display: flex;
+  justify-content: space-between;
+  // overflow: hidden;
 }
 
 .conversation-title {
+  // white-space: nowrap;
+  // display: flex;
+  flex: 1 1 0%;
+  min-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 15px;
+  font-weight: 400;
+}
 
+.conversation-timestamp {
+  // white-space: nowrap;
+  // display: inline-block;
+  font-size: 13px;
+  text-align: right;
+  color: $grey;
+
+}
+
+.latest-message-body {
+  font-size: 13px;
+  color: $grey;
 }
